--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,3 +12,29 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.book-it-link {
+  font: bold 11px Arial;
+  text-decoration: none;
+  background-color: #E3D0A8;
+  color: #FFFFFF;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+  text-align: center;
+}
+
+.add-boat-form {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+}
+
+.boat-image-dropzone {
+  border : 2px dashed #E3D0A8;
+}
+
+.alert {
+  color: red;
+  font-style: italic;
+}
